--- a/src/html/pages/home/1s.html
+++ b/src/html/pages/home/1s.html
@@ -1,4 +1,9 @@
-<div class="section-motorcycle"
+<section class="section __motorcycle"
+         data-scroll
+         data-scroll-offset="50%, 50%"
+         data-scroll-repeat="true"
+         data-scroll-call="switchToWhiteColorTheme">
+  <div class="section-motorcycle"
      id="arch-1s"
      data-scroll
      data-scroll-offset="50%, 50%"
@@ -51,3 +56,4 @@
     </div>
   </div>
 </div>
+</section>
