--- a/src/html/pages/home/hero.html
+++ b/src/html/pages/home/hero.html
@@ -1,4 +1,5 @@
-<div class="hero __home"
+<section class="section">
+  <div class="hero __home"
      data-scroll
      data-scroll-offset="50%, 50%"
      data-scroll-repeat="true"
@@ -28,3 +29,4 @@
     </div>
   </div>
 </div>
+</section>
