--- a/src/html/pages/home/krgt-1.html
+++ b/src/html/pages/home/krgt-1.html
@@ -1,4 +1,5 @@
-<div class="section-motorcycle"
+<section class="section __motorcycle">
+  <div class="section-motorcycle"
      id="arch-krgt-1"
      data-scroll
      data-scroll-offset="50%, 50%"
@@ -50,3 +51,4 @@
     </div>
   </div>
 </div>
+</section>
