--- a/src/html/pages/home/method-143.html
+++ b/src/html/pages/home/method-143.html
@@ -1,4 +1,5 @@
-<div class="section-motorcycle"
+<section class="section __motorcycle">
+  <div class="section-motorcycle"
      id="arch-method-143"
      data-scroll
      data-scroll-offset="50%, 50%"
@@ -50,3 +51,4 @@
     </div>
   </div>
 </div>
+</section>
