--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,11 +7,11 @@
 
 	<title>The best hemp joints on the market</title>
 
-	<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
-	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png" />
-	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png" />
-	<link rel="manifest" href="/images/favicon/site.webmanifest" />
-	<link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#92c155" />
+	<link rel="apple-touch-icon" sizes="180x180" href="../images/favicon/apple-touch-icon.png" />
+	<link rel="icon" type="image/png" sizes="32x32" href="../images/favicon/favicon-32x32.png" />
+	<link rel="icon" type="image/png" sizes="16x16" href="../images/favicon/favicon-16x16.png" />
+	<link rel="manifest" href="../images/favicon/site.webmanifest" />
+	<link rel="mask-icon" href="../images/favicon/safari-pinned-tab.svg" color="#92c155" />
 
 	<meta name="msapplication-TileColor" content="#92c155" />
 	<meta name="theme-color" content="#ffffff" />
@@ -19,7 +19,7 @@
 	<meta name="msapplication-navbutton-color" content="#FFFFFF" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="#FFFFFF" />
 
-	<meta property="og:image" content="/images/Open-Graph.png" />
+	<meta property="og:image" content="../images/Open-Graph.png" />
 
 	<link rel="preload" href="fonts/FuturaLT-CondensedExtraBold.woff" as="font" type="font/woff" crossorigin="anonymous" />
 	<link rel="preload" href="fonts/FuturaLT-CondensedExtraBold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
