fix button hover on safari

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -246,14 +246,16 @@
 							<p>THO-O is a new hemp-derived, federally legal, cannabinoid that can deliver more potency, longer lasting effects, in an easier to vape viscosity than even normal THC.</p>
 						</div>
 						<div class="hero-action">
-							<a href="#" class="btn btn-white scroll-to" data-scroll="#subscribe">
-								<span class="btn-title">subscribe to us</span>
-								<span class="btn-icon">
-							<svg width="14" height="15" viewBox="0 0 14 15" fill="none">
-								<path d="M13.75 1.5C13.75 1.08579 13.4142 0.75 13 0.749999L6.25 0.749999C5.83579 0.749999 5.5 1.08579 5.5 1.5C5.5 1.91421 5.83579 2.25 6.25 2.25H12.25V8.25C12.25 8.66421 12.5858 9 13 9C13.4142 9 13.75 8.66421 13.75 8.25L13.75 1.5ZM1.53033 14.0303L13.5303 2.03033L12.4697 0.969669L0.46967 12.9697L1.53033 14.0303Z" />
-							</svg>
-						</span>
-							</a>
+							<div class="btn-wrap">
+								<a href="#" class="btn btn-white scroll-to" data-scroll="#subscribe">
+									<span class="btn-title">subscribe to us</span>
+									<span class="btn-icon">
+										<svg width="14" height="15" viewBox="0 0 14 15" fill="none">
+											<path d="M13.75 1.5C13.75 1.08579 13.4142 0.75 13 0.749999L6.25 0.749999C5.83579 0.749999 5.5 1.08579 5.5 1.5C5.5 1.91421 5.83579 2.25 6.25 2.25H12.25V8.25C12.25 8.66421 12.5858 9 13 9C13.4142 9 13.75 8.66421 13.75 8.25L13.75 1.5ZM1.53033 14.0303L13.5303 2.03033L12.4697 0.969669L0.46967 12.9697L1.53033 14.0303Z" />
+										</svg>
+									</span>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
