setup scroll data url

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -45,13 +45,13 @@
 							<nav class="nav">
 								<ul>
 									<li>
-										<a href="#" class="link">About</a>
+										<a href="#" class="link scroll-to" data-scroll="#all-products">All products</a>
 									</li>
 									<li>
-										<a href="#" class="link scroll-to">All products</a>
+										<a href="#" class="link scroll-to" data-scroll="#litty">About</a>
 									</li>
 									<li>
-										<a href="#" class="link scroll-to">Contact</a>
+										<a href="#" class="link">Contact</a>
 									</li>
 								</ul>
 							</nav>
@@ -1079,10 +1079,10 @@
 								<p class="footer-nav-title h-4">Sitemap</p>
 								<ul>
 									<li>
-										<a href="#">About</a>
+										<a href="#" class="scroll-to" data-scroll="#litty">About</a>
 									</li>
 									<li>
-										<a href="#">All product</a>
+										<a href="#" class="scroll-to" data-scroll="#all-products">All products</a>
 									</li>
 									<li>
 										<a href="#">Contact</a>
@@ -1093,22 +1093,22 @@
 								<p class="footer-nav-title h-4">Product</p>
 								<ul>
 									<li>
-										<a href="#">Gummies</a>
+										<a href="#" class="scroll-to" data-scroll="#all-products">Gummies</a>
 									</li>
 									<li>
-										<a href="#">Carts</a>
+										<a href="#" class="scroll-to" data-scroll="#all-products">Carts</a>
 									</li>
 									<li>
-										<a href="#">Dabs</a>
+										<a href="#" class="scroll-to" data-scroll="#all-products">Dabs</a>
 									</li>
 									<li>
-										<a href="#">pre-rolles</a>
+										<a href="#" class="scroll-to" data-scroll="#all-products">pre-rolles</a>
 									</li>
 									<li>
-										<a href="#">Moon Rocks</a>
+										<a href="#" class="scroll-to" data-scroll="#all-products">Moon Rocks</a>
 									</li>
 									<li>
-										<a href="#">Disposables</a>
+										<a href="#" class="scroll-to" data-scroll="#all-products">Disposables</a>
 									</li>
 								</ul>
 							</div>
