test displaying instagram photos

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -796,191 +796,196 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
-						<div class="section-content">
-							<h3 class="h-3">testimonials</h3>
-							<div class="section-content-action">
-								<div class="carousel-arrows">
-									<div class="carousel-arrows-btn __prev"></div>
-									<div class="carousel-arrows-btn __next"></div>
-								</div>
-							</div>
-						</div>
+						<div id="instafeed" class="instafeed"></div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-lg-9 offset-lg-3">
-						<div class="testimonials-carousel splide" id="testimonials-carousel">
-							<div class="splide__track">
-								<div class="splide__list">
-									<div class="testimonials-carousel-slide splide__slide">
-										<div class="testimonials-wrap">
-											<div class="testimonials-box">
-												<div class="testimonials-box-head">
-													<p class="testimonial-box-title h-4">Romero C.</p>
-													<div class="testimonials-box-rating">
-														<div class="rating" data-rating="4">
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-														</div>
-													</div>
-												</div>
-												<p class="testimonials-box-description">I'm 250 pounds, 5'7 tall and I usually take 2 of these and it takes about 4 hours to kick in but when it does it works pretty good. I recommend if you like to chill and relax when high.</p>
-												<p class="testimonials-box-detail">30 June 2021 </p>
-											</div>
-											<div class="testimonials-box">
-												<div class="testimonials-box-head">
-													<p class="testimonial-box-title h-4">Wilmer H.</p>
-													<div class="testimonials-box-rating">
-														<div class="rating" data-rating="3">
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-														</div>
-													</div>
-												</div>
-												<p class="testimonials-box-description">I'm 250 pounds, 5'7 tall and I usually take 2 of these and it takes about 4 hours to kick in but when it does it works pretty good. I recommend if you like to chill and relax when high.</p>
-												<p class="testimonials-box-detail">30 June 2021 </p>
-											</div>
-											<div class="testimonials-box">
-												<div class="testimonials-box-head">
-													<p class="testimonial-box-title h-4">Jason P.</p>
-													<div class="testimonials-box-rating">
-														<div class="rating" data-rating="4">
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-														</div>
-													</div>
-												</div>
-												<p class="testimonials-box-description">i definitely love the products , i will be a regular customer for sure.</p>
-												<p class="testimonials-box-detail">30 June 2021 </p>
-											</div>
-										</div>
-									</div>
-									<div class="testimonials-carousel-slide splide__slide">
-										<div class="testimonials-wrap">
-											<div class="testimonials-box">
-												<div class="testimonials-box-head">
-													<p class="testimonial-box-title h-4">Wilmer H.</p>
-													<div class="testimonials-box-rating">
-														<div class="rating" data-rating="3">
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-														</div>
-													</div>
-												</div>
-												<p class="testimonials-box-description">I'm 250 pounds, 5'7 tall and I usually take 2 of these and it takes about 4 hours to kick in but when it does it works pretty good. I recommend if you like to chill and relax when high.</p>
-												<p class="testimonials-box-detail">30 June 2021 </p>
-											</div>
-											<div class="testimonials-box">
-												<div class="testimonials-box-head">
-													<p class="testimonial-box-title h-4">Jason P.</p>
-													<div class="testimonials-box-rating">
-														<div class="rating" data-rating="4">
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-														</div>
-													</div>
-												</div>
-												<p class="testimonials-box-description">i definitely love the products , i will be a regular customer for sure.</p>
-												<p class="testimonials-box-detail">30 June 2021 </p>
-											</div>
-											<div class="testimonials-box">
-												<div class="testimonials-box-head">
-													<p class="testimonial-box-title h-4">Romero C.</p>
-													<div class="testimonials-box-rating">
-														<div class="rating" data-rating="4">
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-															<div class="rating-item">
-																<img src="../images/icons/star.svg" alt="Star" />
-															</div>
-														</div>
-													</div>
-												</div>
-												<p class="testimonials-box-description">I'm 250 pounds, 5'7 tall and I usually take 2 of these and it takes about 4 hours to kick in but when it does it works pretty good. I recommend if you like to chill and relax when high.</p>
-												<p class="testimonials-box-detail">30 June 2021 </p>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+<!--				<div class="row">-->
+<!--					<div class="col-12">-->
+<!--						<div class="section-content">-->
+<!--							<h3 class="h-3">testimonials</h3>-->
+<!--							<div class="section-content-action">-->
+<!--								<div class="carousel-arrows">-->
+<!--									<div class="carousel-arrows-btn __prev"></div>-->
+<!--									<div class="carousel-arrows-btn __next"></div>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--				<div class="row">-->
+<!--					<div class="col-lg-9 offset-lg-3">-->
+<!--						<div class="testimonials-carousel splide" id="testimonials-carousel">-->
+<!--							<div class="splide__track">-->
+<!--								<div class="splide__list">-->
+<!--									<div class="testimonials-carousel-slide splide__slide">-->
+<!--										<div class="testimonials-wrap">-->
+<!--											<div class="testimonials-box">-->
+<!--												<div class="testimonials-box-head">-->
+<!--													<p class="testimonial-box-title h-4">Romero C.</p>-->
+<!--													<div class="testimonials-box-rating">-->
+<!--														<div class="rating" data-rating="4">-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--														</div>-->
+<!--													</div>-->
+<!--												</div>-->
+<!--												<p class="testimonials-box-description">I'm 250 pounds, 5'7 tall and I usually take 2 of these and it takes about 4 hours to kick in but when it does it works pretty good. I recommend if you like to chill and relax when high.</p>-->
+<!--												<p class="testimonials-box-detail">30 June 2021 </p>-->
+<!--											</div>-->
+<!--											<div class="testimonials-box">-->
+<!--												<div class="testimonials-box-head">-->
+<!--													<p class="testimonial-box-title h-4">Wilmer H.</p>-->
+<!--													<div class="testimonials-box-rating">-->
+<!--														<div class="rating" data-rating="3">-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--														</div>-->
+<!--													</div>-->
+<!--												</div>-->
+<!--												<p class="testimonials-box-description">I'm 250 pounds, 5'7 tall and I usually take 2 of these and it takes about 4 hours to kick in but when it does it works pretty good. I recommend if you like to chill and relax when high.</p>-->
+<!--												<p class="testimonials-box-detail">30 June 2021 </p>-->
+<!--											</div>-->
+<!--											<div class="testimonials-box">-->
+<!--												<div class="testimonials-box-head">-->
+<!--													<p class="testimonial-box-title h-4">Jason P.</p>-->
+<!--													<div class="testimonials-box-rating">-->
+<!--														<div class="rating" data-rating="4">-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--														</div>-->
+<!--													</div>-->
+<!--												</div>-->
+<!--												<p class="testimonials-box-description">i definitely love the products , i will be a regular customer for sure.</p>-->
+<!--												<p class="testimonials-box-detail">30 June 2021 </p>-->
+<!--											</div>-->
+<!--										</div>-->
+<!--									</div>-->
+<!--									<div class="testimonials-carousel-slide splide__slide">-->
+<!--										<div class="testimonials-wrap">-->
+<!--											<div class="testimonials-box">-->
+<!--												<div class="testimonials-box-head">-->
+<!--													<p class="testimonial-box-title h-4">Wilmer H.</p>-->
+<!--													<div class="testimonials-box-rating">-->
+<!--														<div class="rating" data-rating="3">-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--														</div>-->
+<!--													</div>-->
+<!--												</div>-->
+<!--												<p class="testimonials-box-description">I'm 250 pounds, 5'7 tall and I usually take 2 of these and it takes about 4 hours to kick in but when it does it works pretty good. I recommend if you like to chill and relax when high.</p>-->
+<!--												<p class="testimonials-box-detail">30 June 2021 </p>-->
+<!--											</div>-->
+<!--											<div class="testimonials-box">-->
+<!--												<div class="testimonials-box-head">-->
+<!--													<p class="testimonial-box-title h-4">Jason P.</p>-->
+<!--													<div class="testimonials-box-rating">-->
+<!--														<div class="rating" data-rating="4">-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--														</div>-->
+<!--													</div>-->
+<!--												</div>-->
+<!--												<p class="testimonials-box-description">i definitely love the products , i will be a regular customer for sure.</p>-->
+<!--												<p class="testimonials-box-detail">30 June 2021 </p>-->
+<!--											</div>-->
+<!--											<div class="testimonials-box">-->
+<!--												<div class="testimonials-box-head">-->
+<!--													<p class="testimonial-box-title h-4">Romero C.</p>-->
+<!--													<div class="testimonials-box-rating">-->
+<!--														<div class="rating" data-rating="4">-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--															<div class="rating-item">-->
+<!--																<img src="../images/icons/star.svg" alt="Star" />-->
+<!--															</div>-->
+<!--														</div>-->
+<!--													</div>-->
+<!--												</div>-->
+<!--												<p class="testimonials-box-description">I'm 250 pounds, 5'7 tall and I usually take 2 of these and it takes about 4 hours to kick in but when it does it works pretty good. I recommend if you like to chill and relax when high.</p>-->
+<!--												<p class="testimonials-box-detail">30 June 2021 </p>-->
+<!--											</div>-->
+<!--										</div>-->
+<!--									</div>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
 			</div>
 		</section>
 		<section class="section subscribe" id="subscribe">
